# wasm3_run

./: .gitignore  Cargo.toml
src/: main.rs  ptr.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  ptr.rs
