[package]
name = "wasm_de"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.5", optional = true }